add social section

--- a/index.html
+++ b/index.html
@@ -534,6 +534,17 @@
                 </div>
             </div>
         </section>
+        <!-- social section -->
+        <section class="lg:mx-20 py-1 h-40 p-6 lg:p-0">
+            <div class="bg-[#13131808] rounded-lg">
+                <div class="hero-content text-center">
+                    <div class="max-w-md">
+                        <h1 class="text-3xl font-bold pb-8">Social Media</h1>
+                        <img class="w-72" src="Images/Social (1).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
