--- a/index.html
+++ b/index.html
@@ -546,7 +546,61 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer pt-16 pb-6 bg-black text-base-content">
+        <div class="lg:mx-20 p-4 lg:p-0 text-white gap-28 grid lg:grid-cols-4">
+            <div class="pl-8 text-center lg:pl-0 lg:text-start">
+                <h1 class="text-2xl font-bold pb-3">
+                    Get In Touch
+                </h1>
+                <p class="opacity-70 pb-3">We're excited to hear from you! Whether you have a question about our
+                    services,
+                    need assistance, or
+                    want to share your feedback, we're here to help.</p>
+                <img class="pb-3" src="Images/Group 1171275338.png" alt="">
+                <img src="Images/Group00.png" alt="">
+            </div>
+            <div class="grid grid-cols-2 p-4 gap-16 text-center lg:p-0 lg:text-start lg:col-span-2 lg:gap-44">
+                <div class="pl-6">
+                    <h1 class="text-2xl font-bold pb-3">
+                        Company
+                    </h1>
+                    <div class="flex flex-col gap-6">
+                        <p class="opacity-70 pb-3">About us</p>
+                        <p class="opacity-70 pb-3">Leadership</p>
+                        <p class="opacity-70 pb-3">Careers</p>
+                        <p class="opacity-70 pb-3">News & Article</p>
+                        <p class="opacity-70 pb-3">Legal Notice</p>
+                    </div>
+                </div>
+                <div class="pl-6">
+                    <h1 class="text-2xl font-bold pb-3">
+                        Support
+                    </h1>
+                    <div class="flex flex-col gap-6">
+                        <p class="opacity-70 pb-3">Help</p>
+                        <p class="opacity-70 pb-3">FAQ</p>
+                        <p class="opacity-70 pb-3">Ticket Support</p>
+                        <p class="opacity-70 pb-3">Contact Us</p>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="lg:pl-6 text-center lg:text-start pl-36 ">
+                <h1 class="text-2xl font-bold pb-3">
+                    Services
+                </h1>
+                <div class="flex flex-col gap-6">
+                    <p class="opacity-70 pb-3">Academy</p>
+                    <p class="opacity-70 pb-3">Group Lesson</p>
+                    <p class="opacity-70 pb-3">Private Lesson</p>
+                    <p class="opacity-70 pb-3">Hockeys for Kids</p>
+                    <p class="opacity-70 pb-3">Hockeys for Adult</p>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
