add FAQ section

--- a/index.html
+++ b/index.html
@@ -437,9 +437,115 @@
             </div>
         </section>
 
+        <!-- clients FAQ section -->
+        <section class="lg:mx-20 py-1 lg:pt-14 px-6 lg:px-0 ">
+            <div class="containar mx-auto px-26 w-3/4 pb-8">
+                <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
+                    Clients Question
+                </h1>
+                <p class="opacity-70 text-center">
+                    Getting started with our services is easy! Simply contact us via email or phone, and our friendly
+                    team will guide you through the process step by step.
+                </p>
+            </div>
+            <div class="border-2 p-8 rounded-lg py-4">
+                <div class="py-8 flex flex-col lg:flex-row gap-6 ">
+                    <img src="Images/11.png" alt="">
+                    <!-- accordions -->
+                    <div class="flex flex-col gap-1">
+                        <!-- 1 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                Our Equipment
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- 2 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Hockey Training
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- 3 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Private Lessons
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- 4 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Ski Touring
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- 5 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Booking
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- 6 -->
+                        <div class="collapse collapse-plus bg-white">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                Pricings
+                            </div>
+                            <div class="collapse-content">
+                                <p class="opacity-70">we pride ourselves on using state-of-the-art equipment to deliver
+                                    exceptional results
+                                    for our clients. Our cutting-edge technology and tools enable us to streamline
+                                    processes, enhance efficiency, and maintain the highest standards of quality.</p>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- Get In Touch -->
         <section class="lg:mx-20 py-1 lg:py-4">
-            <div class="containar mx-auto px-26 w-3/4 pb-8">
+            <div class="containar mx-auto px-26 w-3/4 pb-8 pt-10">
                 <h1 class="text-2xl lg:text-4xl font-bold text-center pb-6">
                     Get In Touch
                 </h1>
